--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "^15.5.9",
     "next-themes": "^0.4.4",
     "react": "^19",
     "react-day-picker": "9.8.0",
@@ -68,7 +68,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^15.2.4",
+    "eslint-config-next": "^15.5.9",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
